change endpoint registration -> auth
